fixed style issue to remove white space from top and bottom of webpage

--- a/src/App.css
+++ b/src/App.css
@@ -2,3 +2,7 @@
 * {
     scrollbar-width: thin;
 }
+html {
+    padding: 0;
+    margin: 0;
+}
